fix: run on older computers

--- a/popping-up-prank.csproj
+++ b/popping-up-prank.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net4.8-windows7.0</TargetFramework>
     <RootNamespace>popping_up_prank</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
